[package]
name = "doom-crafter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "^1.0"
clap = { version = "4.5.1", features = ["derive"] }
image = "0.25.6"
putpng = "1.0.0"
tinywad = "*"
wild = "2.2.1"
three-d = { version = "*", features = ["headless"] }
three-d-asset = { version = "*", features = ["png"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-prompts = "*"
gag = "1.0.0"
indoc = "2.0.6"
which = "7.0.3"
csv = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
